<resources>
    <string name="app_name">PhinmaDinerV2</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="passwordCP">Password</string>
    <string name="usernameCU">Username</string>
    <string name="login">Login</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? <u>Login</u></string>
    <string name="create_a_new_account_sign_up">Create a new account? <u>Sign Up</u></string>
    <string name="welcome">Welcome</string>
    <string name="deals">Deals</string>
    <string name="bento">Bento</string>
    <string name="home">Home</string>
    <string name="stubs">Stubs</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="good_day_phinma_nstudents">GOOD DAY, PHINMA \nSTUDENTS!</string>
    <string name="you_might_want_to_try">You might want to try</string>
    <string name="group_meals">Group Meals</string>
    <string name="solo_with_drinks">Solo With Drinks</string>
    <string name="kalaban_ng_bayan">\"Ang kumakalaban sa presyo, kalaban ng bayan\"</string>
    <string name="foods">Foods</string>
    <string name="feedback">Feedback</string>
    <string name="user">User</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="log_out">Log Out</string>
    <string name="about_us">About Us</string>
    <string name="order_name">Order name:</string>
    <string name="stub_price">Stub price:</string>
    <string name="customer">Customer:</string>
    <string name="food_stub_5pts">Food Stub 5pts</string>
    <string name="food_stub_10pts">Food Stub 10pts</string>
    <string name="food_stub_30pts">Food Stub 30pts</string>
    <string name="food_stub_20pts">Food Stub 20pts</string>
    <string name="food_stub_40pts">Food stub 40pts</string>
    <string name="it_happens_several_times_each_week_a_phinma_student_order_food_through_our_app_by_exchanging_money_for_stub_points_but_each_interaction_is_unquestionably_unique">It happens several times each week– a PHINMA student order food through our app by exchanging money for stub points– but each interaction is unquestionably unique</string>
    <string name="it_s_just_a_moment_in_time_just_one_hand_reaching_over_the_counter_to_present_a_qr_code_for_another_hand_to_scan">It’s just a moment in time– just one hand reaching over the counter to present a QR code for another hand to scan.</string>
    <string name="it_s_just_a_moment_in_time_just_one_hand_reaching_over_the_counter_to_present_a_qr_code_for_another_hand_to_scan_but_it_s_a_connection">It’s just a moment in time– just one hand reaching over the counter to present a QR code for another hand to scan. But it’s a connection.</string>
    <string name="brief_information_about_phinma_diner">BRIEF INFORMATION ABOUT PHINMA DINER</string>
    <string name="phinma_diner_application_s_first_launch_at_phinma_university_of_pangasinan_on_late_october_its_developer_is_composed_of_5_it_students">PHINMA Diner application’s first launch at PHINMA-University of Pangasinan on late October. Its developer is composed of 5 IT students.</string>
    <string name="_2023">2023</string>
    <string name="our_mission">Our Mission</string>
    <string name="to_serve_the_upang_community_by_giving_them_excellent_service_and_high_quality_food_that_suits_their_tastes">To serve the UPANG community by giving them excellent service and high-quality food that suits their tastes.</string>
    <string name="vision">Vision</string>
    <string name="sasamahan_ka_maging_sa_pagpili_ng_best_options_for_meals">“Sasamahan Ka Maging sa Pagpili ng Best Options for Meals”</string>
    <string name="our_primary_concern_is_for_our_phinma_students_and_staff_to_meet_the_ever_changing_demands_of_their_stomachs_n_n_we_are_at_the_very_beginning_of_the_development_of_the_food_ordering_system_at_phinma_university_n_n_to_inspire_and_nurture_the_human_spirit_one_person_one_meal_and_one_university_at_a_time">Our primary concern is for our PHINMA students and staff to meet the ever changing demands of their stomachs.\n\n We are at the very beginning of the development of the food ordering system at PHINMA University.\n\n To inspire and nurture the human spirit – one person, one meal and one university at a time.</string>
    <string name="happy_meal_us_we_or_our_operates_the_phinmadiner_mobile_application_the_service_this_page_informs_you_of_our_policies_regarding_the_collection_use_and_disclosure_of_personal_data_when_you_use_our_service_and_the_choices_you_have_associated_with_that_data_we_use_your_data_to_provide_and_improve_the_service_by_using_the_service_you_agree_to_the_collection_and_use_of_information_in_accordance_with_this_policy_unless_otherwise_defined_in_this_privacy_policy_terms_used_in_this_privacy_policy_have_the_same_meanings_as_in_our_terms_and_conditions">Happy Meal (\'us\', \'we\', or \'our\') operates the PHINMADiner mobile application (the Service). This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data. We use your data to provide and improve the Service. By using the Service, you agree to the collection and use of information in accordance with this policy. Unless otherwise defined in this Privacy Policy, terms used in this Privacy Policy have the same meanings as in our Terms and Conditions.</string>
    <string name="effective_date_oct_23_2023">Effective date: Oct 23, 2023</string>
    <string name="information_collection_and_use">Information Collection And Use</string>
    <string name="we_collect_several_different_types_of_information_for_various_purposes_to_provide_and_improve_our_service_to_you">We collect several different types of information for various purposes to provide and improve our Service to you.</string>
    <string name="uses_made_of_the_information">Uses Made of the Information</string>
    <string name="we_use_information_held_about_you_in_the_following_ways">We use information held about you in the following ways:</string>
    <string name="_1_information_you_give_to_us_we_will_use_this_information_to_carry_out_our_obligations_arising_from_any_contracts_entered_into_between_you_and_us_and_to_provide_you_with_the_information_products_and_services_that_you_request_from_us_to_provide_you_with_information_about_other_goods_and_services_we_offer_that_are_similar_to_those_that_you_have_already_purchased_or_enquired_about_to_notify_you_about_changes_to_our_service_to_ensure_that_content_from_the_application_is_presented_in_the_most_effective_manner_for_you_and_for_your_mobile_phone_n2_information_we_collect_about_you_we_will_use_this_information_to_administer_the_application_and_for_internal_operations_including_troubleshooting_data_analysis_testing_research_statistical_and_survey_purposes_to_improve_the_application_to_ensure_that_content_is_presented_in_the_most_effective_manner_for_you_and_for_your_computer_to_allow_you_to_participate_in_interactive_features_of_our_service_when_you_choose_to_do_so_and_as_part_of_our_efforts_to_keep_the_application_safe_and_secure">1. Information you give to us. We will use this information: to carry out our obligations arising from any contracts entered into between you and us and to provide you with the information, products and services that you request from us; to provide you with information about other goods and services we offer that are similar to those that you have already purchased or enquired about; to notify you about changes to our service; to ensure that content from the Application is presented in the most effective manner for you and for your mobile phone. \n2. Information we collect about you. We will use this information: to administer the Application and for internal operations, including troubleshooting, data analysis, testing, research, statistical and survey purposes; to improve the Application to ensure that content is presented in the most effective manner for you and for your computer; to allow you to participate in interactive features of our service, when you choose to do so; and as part of our efforts to keep the Application safe and secure.</string>
    <string name="phinmadiner_uses_the_collected_data_for_various_purposes_n_to_provide_and_maintain_the_service_n_to_notify_you_about_changes_to_our_service_n_to_allow_you_to_participate_in_interactive_features_of_our_service_when_you_choose_to_do_so_n_to_provide_customer_care_and_support_n_to_provide_analysis_or_valuable_information_so_that_we_can_improve_the_service_n_to_detect_prevent_and_address_technical_issues_n">PHINMADiner uses the collected data for various purposes:\n • To provide and maintain the Service\n • To notify you about changes to our Service\n • To allow you to participate in interactive features of our Service when you choose to do so\n • To provide customer care and support\n • To provide analysis or valuable information so that we can improve the Service\n • To detect, prevent and address technical issues</string>
    <string name="use_of_data">Use of Data</string>
    <string name="email_address_n_first_name_and_last_name">• Email address\n• First name and last name</string>
    <string name="while_using_our_service_we_may_ask_you_to_provide_us_with_certain_personally_identifiable_information_that_can_be_used_to_contact_or_identify_you_personal_data_personally_identifiable_information_may_include_but_is_not_limited_to">While using our Service, we may ask you to provide us with certain personally identifiable information that can be used to contact or identify you (\'Personal Data\'). Personally identifiable information may include, but is not limited to:</string>
    <string name="personal_data">Personal Data</string>
    <string name="types_of_data_collected">Types of Data Collected</string>
    <string name="your_information_including_personal_data_is_processed_at_the_company_s_operating_offices_and_in_any_other_places_where_the_parties_involved_in_the_processing_are_located_it_means_that_this_information_may_be_transferred_to_and_maintained_on_computers_located_outside_of_your_state_province_country_or_other_governmental_jurisdiction_where_the_data_protection_laws_may_differ_from_those_from_your_jurisdiction_n_your_consent_to_this_privacy_policy_followed_by_your_submission_of_such_information_represents_your_agreement_to_that_transfer_n_phinmadiner_will_take_all_steps_reasonably_necessary_to_ensure_that_your_data_is_treated_securely_and_in_accordance_with_this_privacy_policy_and_no_transfer_of_your_personal_data_will_take_place_to_an_organization_or_a_country_unless_there_are_adequate_controls_in_place_including_the_security_of_your_data_and_other_personal_information">Your information, including Personal Data, is processed at the Company\'s operating offices and in any other places where the parties involved in the processing are located. It means that this information may be transferred to — and maintained on — computers located outside of Your state, province, country or other governmental jurisdiction where the data protection laws may differ from those from Your jurisdiction.\n Your consent to this Privacy Policy followed by Your submission of such information represents Your agreement to that transfer.\n PHINMADiner will take all steps reasonably necessary to ensure that Your data is treated securely and in accordance with this Privacy Policy and no transfer of Your Personal Data will take place to an organization or a country unless there are adequate controls in place including the security of Your data and other personal information.</string>
</resources>